--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ip-location",
-  "version": "1.0.28",
+  "version": "1.0.29",
   "description": "Get your ip address and location with just a single line of code; get location information of a provided ip address",
   "type": "module",
   "main": "./dist/cjs/index.js",
@@ -25,7 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "rollup": "rollup -c --bundleConfigAsCjs",
     "version": "npm version patch",
-    "pl": "rollup -c --bundleConfigAsCjs && version && npm publish"
+    "pl": "rollup -c --bundleConfigAsCjs && npm version && npm publish"
   },
   "keywords": [
     "country",
