--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "rollup": "rollup -c --bundleConfigAsCjs",
     "version": "npm version patch",
-    "pl": "rollup -c --bundleConfigAsCjs && version && npm publish"
+    "pl": "rollup -c --bundleConfigAsCjs && npm version && npm publish"
   },
   "keywords": [
     "country",
