--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ip-location",
-  "version": "1.0.31",
+  "version": "1.0.33",
   "description": "Get your ip address and location with just a single line of code; get location information of a provided ip address",
   "type": "module",
   "main": "./dist/cjs/index.js",
@@ -23,9 +23,10 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf dist",
     "rollup": "rollup -c --bundleConfigAsCjs",
     "version": "npm version patch",
-    "pl": "rollup -c --bundleConfigAsCjs && npm version && npm publish"
+    "pl": "rollup -c --bundleConfigAsCjs && version && npm publish"
   },
   "keywords": [
     "country",
@@ -43,15 +44,16 @@
   "author": "WillyVox",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.2.6",
-    "react": "^18.2.0",
-    "typescript": "^5.0.4",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.1.0",
+    "@types/react": "^18.2.6",
+    "react": "^18.2.0",
+    "rimraf": "^6.0.1",
     "rollup": "^3.21.6",
     "rollup-plugin-dts": "^5.3.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4"
   }
 }
