--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ip-location",
-  "version": "1.0.33",
+  "version": "1.0.34",
   "description": "Get your ip address and location with just a single line of code; get location information of a provided ip address",
   "type": "module",
   "main": "./dist/cjs/index.js",
@@ -26,7 +26,7 @@
     "clean": "rimraf dist",
     "rollup": "rollup -c --bundleConfigAsCjs",
     "version": "npm version patch",
-    "pl": "rollup -c --bundleConfigAsCjs && version && npm publish"
+    "publish": "npm publish"
   },
   "keywords": [
     "country",
